--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,15 @@
 name: Build Static Image
 on:
   push:
-    branches: ["main"]
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: "joelsouza/joelsouzacom"
+    branches: ["develop"]
 
 jobs:
-  amd64:
+  deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
-      - name: Build image and push to registry
-        uses: docker/build-push-action@v4
+      - uses: actions/checkout@v2
+      - uses: themarkwill/coolify-actions@v0.0.3 #deploy
         with:
-          context: .
-          file: Dockerfile
-          platforms: linux/amd64
-          push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-      - name: Deploy to Coolify
-        run: |
-          curl --request GET '${{ secrets.COOLIFY_WEBHOOK }}' --header 'Authorization: Bearer ${{ secrets.COOLIFY_TOKEN }}'
+          coolify-url: ${{ secrets.COOLIFY_URL }} # Required
+          coolify-app-id: ${{ secrets.COOLIFY_APP_ID }} #Required
+          coolify-token: ${{ secrets.COOLIFY_TOKEN }} #Required
