--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Trigger Coolify Deployment
         run: |
           curl -X GET "https://coolify.uispace.co/api/v1/deploy?uuid=pg4g48wwwck8ck8koc0gs84o&force=false" \
-            -H "Authorization: Bearer ${{ secrets.COOLIFY_API_TOKEN }}"
+            -H "Authorization: Bearer ${{ secrets.COOLIFY_TOKEN }}"
         env:
-          COOLIFY_API_TOKEN: ${{ secrets.COOLIFY_API_TOKEN }}
+          COOLIFY_TOKEN: ${{ secrets.COOLIFY_TOKEN }}
